Switch to Reflections lib for CommandRegistry class list

--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <!--Reflections lib-->
+    <dependencies>
+        <dependency>
+            <groupId>org.reflections</groupId>
+            <artifactId>reflections</artifactId>
+            <version>0.9.12</version>
+        </dependency>
+    </dependencies>
 </project>
