Function and return (8.2)

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,21 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>in</directory>
+                            <includes>
+                                <include>**/*.asm</include>
+                                <include>**/*.out</include>
+                            </includes>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
